--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/dc7f2462c9.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <app-root></app-root>
